{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 38,
  "lineage": "24a53730-43b1-7dce-b045-23ba432200fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de0ef55a58b98d19",
            "arn": "arn:aws:ec2:eu-west-3:533267226989:elastic-ip/eipalloc-0de0ef55a58b98d19",
            "association_id": "eipassoc-0c99d339d70fcc6a7",
            "domain": "vpc",
            "id": "eipalloc-0de0ef55a58b98d19",
            "instance": "i-0eb8c573c17f2fdfc",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0382dbbb3c11e5453",
            "private_dns": "ip-10-0-1-110.eu-west-3.compute.internal",
            "private_ip": "10.0.1.110",
            "public_dns": "ec2-35-180-59-87.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.59.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance1",
            "aws_security_group.tf_secure",
            "aws_subnet.public_subnet",
            "aws_vpc.my_tf_vpc",
            "data.aws_ami.my_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b15a79dbd7dba95",
            "arn": "arn:aws:ec2:eu-west-3:533267226989:instance/i-0eb8c573c17f2fdfc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb8c573c17f2fdfc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "parisIAM",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0382dbbb3c11e5453",
            "private_dns": "ip-10-0-1-110.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.110",
            "public_ip": "35.180.59.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040d9b2bb5eed1601",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad493bc237367e5b",
            "tags": {
              "Env": "Dev",
              "Name": "tf_test_instance"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "tf_test_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0baa7fefb95f94d"
            ]
          },
          "dependencies": [
            "aws_security_group.tf_secure",
            "aws_subnet.public_subnet",
            "aws_vpc.my_tf_vpc",
            "data.aws_ami.my_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267226989:internet-gateway/igw-0812d2b7709e0f802",
            "id": "igw-0812d2b7709e0f802",
            "owner_id": "533267226989",
            "vpc_id": "vpc-0097acd5c9a0a8642"
          },
          "dependencies": [
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267226989:route-table/rtb-0d7c7e24f553ff4f6",
            "id": "rtb-0d7c7e24f553ff4f6",
            "owner_id": "533267226989",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0812d2b7709e0f802",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0097acd5c9a0a8642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5aed5481c34c36a",
            "route_table_id": "rtb-0d7c7e24f553ff4f6",
            "subnet_id": "subnet-0ad493bc237367e5b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267226989:security-group/sg-0e0baa7fefb95f94d",
            "description": "Allow SSH and HTTP for all network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0baa7fefb95f94d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf_secure",
            "name_prefix": "",
            "owner_id": "533267226989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_secure"
            },
            "tags_all": {
              "Name": "tf_secure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097acd5c9a0a8642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267226989:subnet/subnet-0ad493bc237367e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad493bc237367e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267226989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0097acd5c9a0a8642"
          },
          "dependencies": [
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:533267226989:vpc/vpc-0097acd5c9a0a8642",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-04104073c628b5da5",
            "default_route_table_id": "rtb-0f57e6456ee794b96",
            "default_security_group_id": "sg-0f139045bea00363c",
            "dhcp_options_id": "dopt-091710b9050e35fac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0097acd5c9a0a8642",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f57e6456ee794b96",
            "owner_id": "533267226989",
            "tags": {
              "Name": "my_tf_vpc"
            },
            "tags_all": {
              "Name": "my_tf_vpc"
            }
          }
        }
      ]
    }
  ]
}